<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.ui_general.CreateExpeditionActivity"
    tools:showIn="@layout/activity_create_expedition">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expedition_name"
            android:id="@+id/expeditionName_editText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expedition_mission"
            android:inputType="textMultiLine"
            android:layout_gravity="center_horizontal"
            android:id="@+id/expeditionMission_editText" />

        <EditText
            android:id="@+id/fromDate_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expedition_startdata" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/latitude_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/latitude_digree_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:hint="@string/degree_text"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/degree_sign"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/latitude_min_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:hint="@string/min_text"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/min_sign"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/latitude_sec_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="4"
                android:hint="@string/sec_text"
                android:inputType="number"
                android:maxLength="2"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sec_sign"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:weightSum="1" >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/cancel"
                android:id="@+id/cancel_button" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/save"
                android:id="@+id/save_button"
                android:layout_gravity="right" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>



