<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"

        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="marchenko.com.diplomameteors.ui.ui_avtomat_meteor_syst.FillMeteorsDataActivity"
        tools:showIn="@layout/activity_fill_meteors_data">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/intervalTime_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            />

        <TextView
            android:id="@+id/groupName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/groupName_pattern_test"
            />

    </FrameLayout>

    <TableLayout
        android:id="@+id/conteinerMeteors_tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/num" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/zenith_distance_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/p_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/dashed_p_text" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/angle_length" />

            <Space
                android:layout_width="38dp"
                android:layout_height="30dp"
                android:gravity="center"
                />
        </TableRow>

        <!-- input new rows here -->
    </TableLayout>

    <Button
        android:id="@+id/clear_table_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="clickClearTableMeteors"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/clear_table" />
    <Button
        android:id="@+id/test_values_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="testValues"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/count_text" />

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingBottom="5dp"
    android:text="@string/horizontal_coord" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:id="@+id/horizontal_coord_textView"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="@string/equatorial_coord" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:id="@+id/equatorial_coord_textView"
        />

    <Button
        android:id="@+id/drawOnMap_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="clickDrawOnMap"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/draw_on_map" />

</LinearLayout>