<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="6pt"
        android:text="@string/all_members"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:background="@color/colorLightGray"
        android:textColor="@color/colorDarkGray"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/layout_members"
        android:layout_height="wrap_content">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/round_button"
            android:onClick="clickAddMember"
            android:drawableTop="@android:drawable/ic_input_add"
            android:layout_margin="@dimen/little_but_margin"
            />
        <TextView
            android:textSize="8pt"
            android:text="@string/add_members"
            android:layout_width="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cancel"
            android:onClick="buttonCancelClicked"
            android:id="@+id/cancel_button" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/save"
            android:id="@+id/save_button"
            android:onClick="buttonSaveClicked"
            android:layout_gravity="right" />
    </LinearLayout>
</LinearLayout>
