<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/intervals_tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/beginIntervalTime_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="30"
                android:hint="@string/time_pattern"
                android:onClick="clickBeginIntervalTime" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="30"
                android:hint="@string/time_pattern"
                android:onClick="clickEndIntervalTime" />

            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@android:drawable/ic_menu_edit" />

            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@android:drawable/ic_menu_save" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fio" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/clouds" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/moon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/moon_height" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/radiant_height" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fio" />


            <EditText
                android:id="@+id/clouds_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:inputType="number"
                android:padding="5dp" />

            <EditText
                android:id="@+id/moon_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:inputType="number"
                android:padding="5dp" />


            <EditText
                android:id="@+id/moon_height_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:inputType="number"
                android:padding="5dp" />

            <EditText
                android:id="@+id/radiant_height_editText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:inputType="number"
                android:padding="5dp" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/states_tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fio" />

            <TableLayout
                android:layout_width="0dp"
                android:id="@+id/beginEndStates_tableLayout"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/beginState_textView"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/begin_state" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/endState_textView"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/end_state" />

            </TableLayout>

            <TableLayout
                android:layout_width="0dp"
                android:id="@+id/magnitudeState_tableLayout"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/beginMagnitude_textView"
                    android:background="@drawable/cell_shape"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/begin_magnitude" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/endMagnitude_textView"
                    android:background="@drawable/cell_shape"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/end_magnitude" />
            </TableLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:id="@+id/centerConstellation_textView"
                android:text="@string/center_constellation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:id="@+id/centerStar_textView"
                android:text="@string/center_star" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:id="@+id/direction_textView"
                android:text="@string/direction" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fio" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:layout_width="0dp"
                    android:id="@+id/beginState_editText"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:gravity="center"
                    android:padding="5dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/endState_editText"
                    android:layout_weight="1"
                    android:background="@drawable/cell_shape"
                    android:gravity="center"
                    android:padding="5dp"
                     />

            </TableLayout>

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/beginMagnitude_editText"
                    android:background="@drawable/cell_shape"
                    android:gravity="center"
                    android:padding="5dp"
                     />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/endMagnitude_editText"
                    android:background="@drawable/cell_shape"
                    android:gravity="center"
                    android:padding="5dp"
                     />
            </TableLayout>

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:id="@+id/centerConstellation_editText"
                 />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:id="@+id/centerStar_editText"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:id="@+id/direction_editText"
                 />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:onClick="clickStartActivityFillMeteorData"
        android:text="@string/input_meteors_data"
        android:layout_height="wrap_content">

    </Button>


</android.support.v7.widget.LinearLayoutCompat>